--- a/kicad-hs.cabal
+++ b/kicad-hs.cabal
@@ -11,14 +11,12 @@ copyright:           (c) 2018 Ben Gamari
 build-type:          Simple
 cabal-version:       >=1.10
 
-executable kicad-hs
-  main-is:             Replicate.hs
-  other-modules:       Pcb
-                       Netlist
-                       SExpr
-                       SExpr.Parse
-                       SExpr.Class
-  other-extensions:    RankNTypes, DataKinds, FlexibleContexts, OverloadedStrings, RecordWildCards, TemplateHaskell, GeneralizedNewtypeDeriving, FlexibleInstances, MultiParamTypeClasses, TypeFamilies, MonadFailDesugaring, TypeSynonymInstances, DeriveFunctor
+library
+  exposed-modules:     Kicad.Pcb
+                       Kicad.Netlist
+                       Kicad.SExpr
+                       Kicad.SExpr.Parse
+                       Kicad.SExpr.Class
   build-depends:       base >=4.10 && <4.11,
                        yaml >=0.8 && <0.9,
                        lens >=4.16 && <4.17,
@@ -30,4 +28,18 @@ executable kicad-hs
                        trifecta,
                        prettyprinter,
                        text
+  hs-source-dirs:      src                
+  default-language:    Haskell2010
+
+executable kicad-hs
+  main-is:             Replicate.hs
+  other-extensions:    RankNTypes, DataKinds, FlexibleContexts, OverloadedStrings, RecordWildCards, TemplateHaskell, GeneralizedNewtypeDeriving, FlexibleInstances, MultiParamTypeClasses, TypeFamilies, MonadFailDesugaring, TypeSynonymInstances, DeriveFunctor
+  build-depends:       base,
+                       yaml,
+                       lens,
+                       scientific,
+                       containers,
+                       linear,
+                       text,
+                       kicad-hs
   default-language:    Haskell2010
