--- a/kicad-hs.cabal
+++ b/kicad-hs.cabal
@@ -17,6 +17,7 @@ library
                        Kicad.SExpr
                        Kicad.SExpr.Parse
                        Kicad.SExpr.Class
+                       Kicad.Schematic
   build-depends:       base >=4.10 && <4.11,
                        yaml >=0.8 && <0.9,
                        lens >=4.16 && <4.17,
