--- a/kicad-hs.cabal
+++ b/kicad-hs.cabal
@@ -33,9 +33,21 @@ library
   hs-source-dirs:      src                
   default-language:    Haskell2010
 
+executable kicad-mk-symbol
+  main-is:             MkSymbol.hs
+  build-depends:       base,
+                       lens,
+                       scientific,
+                       containers,
+                       linear,
+                       text,
+                       bytestring,
+                       cassava,
+                       kicad-hs
+  default-language:    Haskell2010
+
 executable kicad-replicate
   main-is:             Replicate.hs
-  other-extensions:    RankNTypes, DataKinds, FlexibleContexts, OverloadedStrings, RecordWildCards, TemplateHaskell, GeneralizedNewtypeDeriving, FlexibleInstances, MultiParamTypeClasses, TypeFamilies, TypeSynonymInstances, DeriveFunctor
   build-depends:       base,
                        yaml,
                        lens,
