--- a/kicad-hs.cabal
+++ b/kicad-hs.cabal
@@ -46,6 +46,18 @@ executable kicad-mk-symbol
                        kicad-hs
   default-language:    Haskell2010
 
+executable kicad-repin-footprint
+  main-is:             RepinFootprint.hs
+  build-depends:       base,
+                       lens,
+                       scientific,
+                       containers,
+                       text,
+                       bytestring,
+                       cassava,
+                       kicad-hs
+  default-language:    Haskell2010
+
 executable kicad-replicate
   main-is:             Replicate.hs
   build-depends:       base,
